--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,14 @@
     <packaging>pom</packaging>
     <modules>
         <module>ejb-demo</module>
+        <module>VanillaJMX</module>
+        <module>ejbr</module>
+        <module>ejbr-client</module>
     </modules>
 
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
